# xo-gis

./: README.md  pyproject.toml  setup.sh  xo.py
.github/workflows/: test.yml
config/: repos.txt
src/: banner.py  scraper.py  utils.py
tests/: test_scraper.py
